--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@cloudscape-design/components": "^3.0.831",
+    "@cloudscape-design/design-tokens": "^3.0.51",
     "@cloudscape-design/global-styles": "^1.0.32",
     "jotai": "^2.10.2",
     "react": "^18.3.1",
