--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@cloudscape-design/design-tokens": "^3.0.51",
     "@cloudscape-design/global-styles": "^1.0.32",
     "jotai": "^2.10.2",
+    "jszip": "^3.10.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
