--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@cloudscape-design/components": "^3.0.831",
     "@cloudscape-design/design-tokens": "^3.0.51",
     "@cloudscape-design/global-styles": "^1.0.32",
+    "@hookform/resolvers": "^3.9.1",
     "jotai": "^2.10.2",
     "jszip": "^3.10.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
-    "styled-components": "^6.1.13"
+    "styled-components": "^6.1.13",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.3",
