--- a/package.json
+++ b/package.json
@@ -7,27 +7,33 @@
     "lint": "npx @biomejs/biome ci",
     "dev": "rsbuild dev --open",
     "format": "npx @biomejs/biome check --write",
-    "preview": "rsbuild preview"
+    "preview": "rsbuild preview",
+    "prepare": "husky"
   },
   "dependencies": {
-    "@cloudscape-design/components": "^3.0.831",
-    "@cloudscape-design/design-tokens": "^3.0.51",
-    "@cloudscape-design/global-styles": "^1.0.32",
-    "@hookform/resolvers": "^3.9.1",
-    "jotai": "^2.10.2",
+    "@cloudscape-design/components": "^3.0.1077",
+    "@cloudscape-design/design-tokens": "^3.0.60",
+    "@cloudscape-design/global-styles": "^1.0.45",
+    "@hookform/resolvers": "^5.2.1",
+    "jotai": "^2.13.1",
     "jszip": "^3.10.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-hook-form": "^7.53.2",
-    "styled-components": "^6.1.13",
-    "yup": "^1.4.0"
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "react-hook-form": "^7.62.0",
+    "styled-components": "^6.1.19",
+    "yup": "^1.7.0"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.2.2",
-    "@rsbuild/core": "^1.0.19",
-    "@rsbuild/plugin-react": "^1.0.6",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "typescript": "^5.6.3"
+    "@rsbuild/core": "^1.5.1",
+    "@rsbuild/plugin-react": "^1.4.0",
+    "@types/react": "^19.1.12",
+    "@types/react-dom": "^19.1.9",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.1.5",
+    "typescript": "^5.9.2"
+  },
+  "lint-staged": {
+    "*": "npx @biomejs/biome check --write"
   }
 }
